--- a/stb/core/templates/base.html
+++ b/stb/core/templates/base.html
@@ -53,8 +53,8 @@
         <div class="circle--fluid--cell circle--fluid--secondary">
           <nav>
             <ul class="circle--inline">
-              <li><a href="signup.html">Sign Up</a></li>
-              <li><a href="signin.html">Sign In</a></li>
+              <li><a href="registration/signup.html">Sign Up</a></li>
+              <li><a href="registration/signin.html">Sign In</a></li>
             </ul>
           </nav>
         </div>
