redirect to login

--- a/stb/core/templates/profile.html
+++ b/stb/core/templates/profile.html
@@ -9,6 +9,7 @@
       <ul class="circle--pill--list">
         <li><a href="applications.html">Applications</a></li>
         <li><a class="selected" href="profile.html">Profile</a></li>
+        <li><a class="selected" href="profile.html">{{ profile.user.username }}</a></li>
       </ul>
     </nav>
   </div>
