--- a/stb/core/templates/profile_edit.html
+++ b/stb/core/templates/profile_edit.html
@@ -24,12 +24,23 @@
     </div>
 
     <div class="grid-70">
-      <input type="text" value="Wendy McElroy" placeholder="Full Name" class="circle--input--h1">
-      <div class="circle--article--body">
-        <textarea placeholder="Tell us about yourself...">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      <form method="post">
+        {% csrf_token %}
+        ...
+        {{ form }}
 
-  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</textarea>
+        {% for formset in inlines %}
+          {{ formset }}
+        {% endfor %}
+        ...
+        <input type="submit" value="Submit" />
+      </form>
+      <!--
+      <input type="text" value="{{ profile.full_name }}" placeholder="Full Name" class="circle--input--h1">
+      <div class="circle--article--body">
+        <textarea placeholder="Tell us about yourself...">{{ profile.description }}</textarea>
       </div>
+      -->
 
       <h2>Past Projects</h2>
       <table class="u-full-width circle--table">
