formsets for skills

--- a/stb/core/templates/profile.html
+++ b/stb/core/templates/profile.html
@@ -63,7 +63,7 @@
 
       <div class="circle--secondary--module">
         <div class="circle--primary--avatar">
-
+            {{ profile.avatar }}
         </div>
       </div>
 
