--- a/stb/core/templates/profile_edit.html
+++ b/stb/core/templates/profile_edit.html
@@ -13,28 +13,28 @@
     </nav>
   </div>
 
+  <form method="post">
+  {% csrf_token %}
   <div class="bounds circle--page">
     <div class="circle--page--header circle--fluid">
       <div class="circle--fluid--cell circle--fluid--primary">
         <h2>Profile</h2>
       </div>
       <div class="circle--fluid--cell circle--fluid--secondary">
-        <a class="button button-primary icon-on-left" href="profile.html">Save Changes</a>
+         <input type="submit" value="Submit" />
+        <!-- <a class="button button-primary icon-on-left" href="profile.html">Save Changes</a> -->
       </div>
     </div>
 
     <div class="grid-70">
-      <form method="post">
-        {% csrf_token %}
-        ...
+
+
         {{ form }}
 
-        {% for formset in inlines %}
-          {{ formset }}
-        {% endfor %}
-        ...
-        <input type="submit" value="Submit" />
-      </form>
+
+
+
+
       <!--
       <input type="text" value="{{ profile.full_name }}" placeholder="Full Name" class="circle--input--h1">
       <div class="circle--article--body">
@@ -73,6 +73,23 @@
 
     <div class="grid-25 grid-push-5">
 
+      {% for formset in inlines %}
+          {% if formset.0 %}
+          <div class="circle--secondary--module">
+          <h4>My Skills</h4>
+          <ul class="circle--clone--list">
+            <li>
+              {{ formset }}
+              <input type="text" placeholder="Skill" />
+              <a class="circle--clone--add">Add Skill</a>
+              <a class="circle--clone--remove">Remove</a>
+            </li>
+          </ul>
+        </div>
+      {% endif %}
+
+        {% endfor %}
+      <!--
       <div class="circle--secondary--module">
         <div class="circle--primary--avatar">
           <a class="button">
@@ -81,17 +98,9 @@
           </a>
         </div>
       </div>
+      -->
 
-      <div class="circle--secondary--module">
-        <h4>My Skills</h4>
-        <ul class="circle--clone--list">
-          <li>
-            <input type="text" placeholder="Skill" />
-            <a class="circle--clone--add">Add Skill</a>
-            <a class="circle--clone--remove">Remove</a>
-          </li>
-        </ul>
-      </div>
+
 
       <div class="circle--secondary--module">
         <h4>My Projects</h4>
@@ -107,5 +116,6 @@
     </div>
 
   </div>
+  </form>
 
 {% endblock %}
