--- a/stb/core/templates/base.html
+++ b/stb/core/templates/base.html
@@ -29,6 +29,7 @@
   <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
   <script type="text/javascript" src="{% static 'js/autogrow.js' %}"></script>
   <script type="text/javascript" src="{% static 'js/global.js' %}"></script>
+  {% block js %}{% endblock %}
 
 
 </head>
