--- a/stb/core/templates/profile_edit.html
+++ b/stb/core/templates/profile_edit.html
@@ -13,7 +13,7 @@
     </nav>
   </div>
 
-  <form method="post">
+  <form method="post" enctype="multipart/form-data">
   {% csrf_token %}
     {{ formset.management_form }}
   <div class="bounds circle--page">
@@ -74,23 +74,36 @@
 
     <div class="grid-25 grid-push-5">
 
+
+
       {% for formset in inlines %}
 
-          {% if formset.0 %}
-          <div class="circle--secondary--module">
+
+          {% if formest.0 %}
           <h4>My Skills</h4>
-          <ul class="circle--clone--list">
-            <li>
-              {{ formset }}
-              <input type="text" placeholder="Skill" />
-              <a class="circle--clone--add">Add Skill</a>
-              <a class="circle--clone--remove">Remove</a>
-            </li>
-          </ul>
-        </div>
-      {% endif %}
+           {{ formset }}
+          {% else %}
+       <h4>My Projects</h4>
+          {{ formset }}
+          {% endif %}
 
         {% endfor %}
+
+      <!--
+
+            <div class="circle--secondary--module">
+              <h4>My Skills</h4>
+              <ul class="circle--clone--list">
+                <li>
+
+                  <input type="text" placeholder="Skill" />
+                  <a class="circle--clone--add">Add Skill</a>
+                  <a class="circle--clone--remove">Remove</a>
+                </li>
+              </ul>
+            </div>
+      -->
+
       <!--
       <div class="circle--secondary--module">
         <div class="circle--primary--avatar">
@@ -103,6 +116,7 @@
       -->
 
 
+      <!--
 
       <div class="circle--secondary--module">
         <h4>My Projects</h4>
@@ -116,8 +130,21 @@
         </ul>
       </div>
     </div>
+    -->
 
   </div>
   </form>
 
+{% endblock %}
+
+
+{% block js %}
+<!-- Include formset plugin -->
+<script src="{% static 'extra-js/jquery.formset.js' %}"></script>
+<script>
+    $('.skill-set').formset({
+        addText: 'add link - works',
+        deleteText: 'remove - works'
+    });
+</script>
 {% endblock %}
