--- a/stb/core/templates/profile.html
+++ b/stb/core/templates/profile.html
@@ -68,21 +68,18 @@
       <div class="circle--secondary--module">
         <h4>My Skills</h4>
         <ul class="unloaded">
-          <li>Skill 1</li>
-          <li>Skill 2</li>
-          <li>Skill 3</li>
-          <li>Skill 4</li>
-          <li>Skill 5</li>
+          {% for skill in skills %}
+          <li>{{ skill.title }}</li>
+          {% endfor %}
         </ul>
       </div>
 
       <div class="circle--secondary--module">
         <h4>My Projects</h4>
         <ul class="circle--link--list">
-          <li><a>Project 1</a></li>
-          <li><a>Project 2</a></li>
-          <li><a>Project 3</a></li>
-          <li><a>Project 4</a></li>
+          {% for project in projects %}
+          <li>{{ project.title }}</li>
+          {% endfor %}
         </ul>
       </div>
     </div>
