update, create project

--- a/stb/core/templates/project_edit.html
+++ b/stb/core/templates/project_edit.html
@@ -32,8 +32,8 @@
           </li>
           {% endfor %}
         </ul>
-
-        <a class="button button-primary" href="project.html">Save Changes</a>
+        <input type="submit" value="Submit" />
+        <!-- <a class="button button-primary" href="project.html">Save Changes</a> -->
 
       </div>
     </div>
