--- a/stb/core/templates/profile.html
+++ b/stb/core/templates/profile.html
@@ -78,7 +78,7 @@
         <h4>My Projects</h4>
         <ul class="circle--link--list">
           {% for project in projects %}
-          <li>{{ project.title }}</li>
+          <li><a href="{% url 'project' project.id %}">{{ project.title }}</a></li>
           {% endfor %}
         </ul>
       </div>
