--- a/stb/core/templates/project_edit.html
+++ b/stb/core/templates/project_edit.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-  <form method="post">
+<form method="post">
   {% csrf_token %}
   <div class="circle--actions--bar">
     <div class="bounds">
@@ -18,7 +18,17 @@
   <div class="bounds circle--page circle--article">
     <div class="grid-70">
       <div class="circle--article--body">
-        {{ form }}
+        {% for field in form %}
+        {% if field.label == "Title" or field.label == "Description" %}
+          <div class="fieldWrapper">
+          {{ field.errors }}
+          {{ field.label_tag }} {{ field }}
+          {% if field.help_text %}
+          <p class="help">{{ field.help_text|safe }}</p>
+          {% endif %}
+          </div>
+        {% endif %}
+        {% endfor %}
       </div>
 
       <div class="circle--project--positions">
@@ -27,30 +37,44 @@
         <ul class="circle--group--list circle--clone--list">
           {{ inlines.0.management_form}}
           {% for formset in inlines.0 %}
-          <li>
+          <li class="inline-position">
             {{ formset }}
           </li>
           {% endfor %}
         </ul>
         <input type="submit" value="Submit" />
         <!-- <a class="button button-primary" href="project.html">Save Changes</a> -->
-
       </div>
     </div>
 
     <div class="grid-25 grid-push-5">
-      <div class="circle--secondary--module">
-        <h3>Project Timeline</h3>
-        <textarea placeholder="Time estimate" class="circle--textarea--input">10 hours</textarea>
-      </div>
-
-      <div class="circle--secondary--module">
-        <h3>Application Requirements</h3>
-        <textarea>Applicants are required to work from our headquarters located in Antarctica.</textarea>
-      </div>
-
+      {% for field in form %}
+        {% if field.label == "Timeline" or field.label == "Applicant requirements" %}
+          <div class="circle--secondary--module">
+          {{ field.errors }}
+          {{ field.label_tag }} {{ field }}
+          {% if field.help_text %}
+          <p class="help">{{ field.help_text|safe }}</p>
+          </div>
+          {% endif %}
+        {% endif %}
+      {% endfor %}
     </div>
   </div>
-  </form>
+</form>
 
+{% endblock %}
+
+{% block js %}
+<!-- Include formset plugin -->
+<script src="{% static 'extra-js/jquery.formset.js' %}"></script>
+<script>
+  $( document ).ready(function() {
+    $('.inline-position').formset({
+        prefix: '{{ inlines.0.prefix }}',
+        addText: 'add link',
+        deleteText: 'remove'
+    });
+  });
+</script>
 {% endblock %}
