--- a/stb/core/templates/project.html
+++ b/stb/core/templates/project.html
@@ -4,10 +4,14 @@
 
 {% block content %}
 
+
+{{ profile }}<br>
+
+
   <div class="circle--actions--bar">
     <div class="bounds">
       <div class="grid-100">
-        <a class="button" href="project_edit.html">Edit Project</a>
+        <a class="button" href="{% url 'project-edit' project.id %}">Edit Project</a>
         <a class="button button-text" href="index.html">Delete Project</a>
       </div>
     </div>
@@ -17,32 +21,25 @@
     <div class="grid-70">
       <div class="circle--article--header">
         <h4 class="circle--article--section">Project</h4>
-        <h1 class="circle--article--title">Currency Calculator</h1>
-        <p class="circle--article--byline">Project Owner: <a>Wendy McElroy</a></p>
+        <h1 class="circle--article--title">{{ project.title }}</h1>
+        <p class="circle--article--byline">Project Owner: <a>{{ profile.full_name }}</a></p>
       </div>
 
       <div class="circle--article--body">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        {{ project.description }}
       </div>
 
       <div class="circle--project--positions">
         <h2>Positions</h2>
 
         <ul class="circle--group--list">
+          {% for position in positions %}
           <li>
-            <h3>iOS Developer</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <h3>{{ position.title }}</h3>
+            <p>{{ position.description }}</p>
             <a class="button button-primary">Apply</a>
           </li>
-          <li>
-            <h3>Designer</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <a class="button button-primary button-inactive">Position Filled</a>
-          </li>
+          {% endfor %}
         </ul>
       </div>
 
@@ -52,19 +49,20 @@
       <div class="circle--secondary--module">
         <h3>Project Needs</h3>
         <ul class="circle--link--list">
-          <li><a>iOS Developer</a></li>
-          <li><a>Designer</a></li>
+          {% for position in positions %}
+          <li><a>{{ position.title }}</a></li>
+          {% endfor %}
         </ul>
       </div>
 
       <div class="circle--secondary--module">
         <h3>Project Timeline</h3>
-        <p>10 hours</p>
+        <p>{{ project.timeline }}</p>
       </div>
 
       <div class="circle--secondary--module">
         <h3>Applicant Requirements</h3>
-        <p>Applicants are required to work from our headquarters located in Antarctica.</p>
+        <p>{{ project.applicant_requirements }}</p>
       </div>
 
     </div>
