--- a/stb/core/templates/project_new.html
+++ b/stb/core/templates/project_new.html
@@ -18,7 +18,17 @@
   <div class="bounds circle--page circle--article">
     <div class="grid-70">
       <div class="circle--article--body">
-        {{ form }}
+        {% for field in form %}
+        {% if field.label == "Title" or field.label == "Description" %}
+          <div class="fieldWrapper">
+          {{ field.errors }}
+          {{ field.label_tag }} {{ field }}
+          {% if field.help_text %}
+          <p class="help">{{ field.help_text|safe }}</p>
+          {% endif %}
+          </div>
+        {% endif %}
+        {% endfor %}
       </div>
 
       <div class="circle--project--positions">
@@ -27,7 +37,7 @@
         <ul class="circle--group--list circle--clone--list">
           {{ inlines.0.management_form}}
           {% for formset in inlines.0 %}
-          <li>
+          <li class="inline-position">
             {{ formset }}
           </li>
           {% endfor %}
@@ -39,19 +49,33 @@
     </div>
 
     <div class="grid-25 grid-push-5">
-
-      <div class="circle--secondary--module">
-        <h3>Project Timeline</h3>
-        <textarea placeholder="Time estimate" class="circle--textarea--input"></textarea>
-      </div>
-
-      <div class="circle--secondary--module">
-        <h3>Applicant Requirements</h3>
-        <textarea></textarea>
-      </div>
-
+      {% for field in form %}
+        {% if field.label == "Timeline" or field.label == "Applicant requirements" %}
+          <div class="circle--secondary--module">
+          {{ field.errors }}
+          {{ field.label_tag }} {{ field }}
+          {% if field.help_text %}
+          <p class="help">{{ field.help_text|safe }}</p>
+          </div>
+          {% endif %}
+        {% endif %}
+      {% endfor %}
     </div>
   </div>
   </form>
 
+{% endblock %}
+
+{% block js %}
+<!-- Include formset plugin -->
+<script src="{% static 'extra-js/jquery.formset.js' %}"></script>
+<script>
+  $( document ).ready(function() {
+    $('.inline-position').formset({
+        prefix: '{{ inlines.0.prefix }}',
+        addText: 'add link',
+        deleteText: 'remove'
+    });
+  });
+</script>
 {% endblock %}
