--- a/stb/core/templates/project_new.html
+++ b/stb/core/templates/project_new.html
@@ -9,8 +9,8 @@
   <div class="circle--actions--bar">
     <div class="bounds">
       <div class="grid-100">
-        <a class="button button-primary" href="project.html">Save Project</a>
-        <a class="button button-text" href="index.html">Discard</a>
+        <input type="submit" value="Submit" />
+        <a class="button button-text" href="{% url 'index' %}">Discard</a>
       </div>
     </div>
   </div>
