--- a/stb/core/templates/applications.html
+++ b/stb/core/templates/applications.html
@@ -33,8 +33,9 @@
         <h4>My Projects</h4>
         <ul class="circle--filter--list">
           <li><a class="selected">All Projects</a></li>
-          <li><a>Currency Calculator</a></li>
-          <li><a>Twitter Client</a></li>
+          {% for project in projects %}
+          <li><a href="{% url 'applications-project' project.id %}">{{ project.title }}</a></li>
+          {% endfor %}
         </ul>
       </div>
 
@@ -42,14 +43,9 @@
         <h4>Project Needs</h4>
         <ul class="circle--filter--list">
           <li><a class="selected">All Needs</a></li>
-          <li><a>Android Developer</a></li>
-          <li><a>Designer</a></li>
-          <li><a>Java Developer</a></li>
-          <li><a>PHP Developer</a></li>
-          <li><a>Python Developer</a></li>
-          <li><a>Rails Developer</a></li>
-          <li><a>WordPress Developer</a></li>
-          <li><a>iOS Developer</a></li>
+          {% for position in positions %}
+          <li><a href="{% url 'applications-position' position.id %}">{{ position.title }}</a></li>
+          {% endfor %}
         </ul>
       </div>
 
@@ -64,24 +60,17 @@
           </tr>
         </thead>
         <tbody>
-          <tr class="clickable-row" data-href="profile.html">
+          {% for key, value in applicant_dict.items %}
+          <tr class="clickable-row" data-href="{% url 'profile' %}">
             <td>
-              <h3>Jim Horton</h3>
-              <p>Currency Calculator</p>
+              <h3>{{ value.0 }}</h3>
+              <p>{{ value.1.title }}</p>
             </td>
             <td class="circle--cell--right">
-              <span class="secondary-label">Rails Developer</span>
+              <span class="secondary-label">{{ value.2.title }}</span>
             </td>
           </tr>
-          <tr class="clickable-row" data-href="profile.html">
-            <td>
-              <h3>Jenny McMann</h3>
-              <p>Currency Calculator</p>
-            </td>
-            <td class="circle--cell--right">
-              <span class="secondary-label">Designer</span>
-            </td>
-          </tr>
+          {% endfor %}
         </tbody>
       </table>
 
