profile id, profile templates

--- a/stb/core/templates/profile.html
+++ b/stb/core/templates/profile.html
@@ -20,7 +20,7 @@
         <h2>Profile</h2>
       </div>
       <div class="circle--fluid--cell circle--fluid--secondary">
-        <a class="button icon-on-left" href="{% url 'profile-edit' %}">Edit</a>
+        <a class="button icon-on-left" href="{% url 'profile-edit' profile.id %}">Edit</a>
       </div>
     </div>
 
