--- a/stb/core/templates/project-needs.html
+++ b/stb/core/templates/project-needs.html
@@ -23,7 +23,7 @@
       <div class="circle--filter circle--secondary--module">
         <h4>Project Needs</h4>
         <ul class="circle--filter--list">
-            <li><a class="selected">All Needs</a></li>
+            <li><a class="selected" href="{% url 'index' %}">All Needs</a></li>
             <li><a>{{ position }}</a></li>
         </ul>
       </div>
