--- a/stb/core/templates/applications.html
+++ b/stb/core/templates/applications.html
@@ -23,7 +23,7 @@
         <h4>Status</h4>
         <ul class="circle--filter--list">
           <li><a class="selected">All Applications</a></li>
-          <li><a>New Applications</a></li>
+          <li><a href="{% url 'applications' %}">New Applications</a></li>
           <li><a>Accepted</a></li>
           <li><a>Rejected</a></li>
         </ul>
@@ -32,7 +32,7 @@
       <div class="circle--filter circle--secondary--module">
         <h4>My Projects</h4>
         <ul class="circle--filter--list">
-          <li><a class="selected">All Projects</a></li>
+          <li><a class="selected" href="{% url 'applications' %}">All Projects</a></li>
           {% for project in projects %}
           <li><a href="{% url 'applications-project' project.id %}">{{ project.title }}</a></li>
           {% endfor %}
@@ -42,7 +42,7 @@
       <div class="circle--filter circle--secondary--module">
         <h4>Project Needs</h4>
         <ul class="circle--filter--list">
-          <li><a class="selected">All Needs</a></li>
+          <li><a class="selected" href="{% url 'applications' %}">All Needs</a></li>
           {% for position in positions %}
           <li><a href="{% url 'applications-position' position.id %}">{{ position.title }}</a></li>
           {% endfor %}
