--- a/stb/core/templates/profile.html
+++ b/stb/core/templates/profile.html
@@ -67,6 +67,7 @@
           <li>{{ skill.title }}</li>
           {% endfor %}
         </ul>
+          {{ profile.other_skills }}
       </div>
 
       <div class="circle--secondary--module">
