--- a/stb/core/templates/index.html
+++ b/stb/core/templates/index.html
@@ -70,7 +70,7 @@
               <div class="row">
                   <div class="col-md-12">
                       <div class="main-card mb-3 card">
-                          <div class="card-header">Active Users
+                          <div class="card-header">Active Projects
                               <div class="btn-actions-pane-right">
                                   <div role="group" class="btn-group-sm btn-group">
                                       <button class="active btn btn-focus">Last Week</button>
@@ -82,16 +82,16 @@
                               <table class="align-middle mb-0 table table-borderless table-striped table-hover">
                                   <thead>
                                   <tr>
-                                      <th class="text-center">#</th>
-                                      <th>Name</th>
-                                      <th class="text-center">City</th>
-                                      <th class="text-center">Status</th>
-                                      <th class="text-center">Actions</th>
+                                      <th class="text-center">Project ID #</th>
+                                      <th>Project Title</th>
+                                      <th class="text-center">Project Needs</th>
+                                      <th class="text-center">Action</th>
                                   </tr>
                                   </thead>
                                   <tbody>
+                                {% for project in projects %}
                                   <tr>
-                                      <td class="text-center text-muted">#345</td>
+                                      <td class="text-center text-muted">#{{ project.id }}</td>
                                       <td>
                                           <div class="widget-content p-0">
                                               <div class="widget-content-wrapper">
@@ -101,94 +101,21 @@
                                                       </div>
                                                   </div>
                                                   <div class="widget-content-left flex2">
-                                                      <div class="widget-heading">John Doe</div>
-                                                      <div class="widget-subheading opacity-7">Web Developer</div>
+                                                      <div class="widget-heading">{{ project.title }}</div>
                                                   </div>
                                               </div>
                                           </div>
                                       </td>
-                                      <td class="text-center">Madrid</td>
                                       <td class="text-center">
-                                          <div class="badge badge-warning">Pending</div>
+                                        {% for position in project.positions.all %}
+                                            {{ position }}{% if forloop.last %}{% else %}, {% endif %}
+                                        {% endfor %}
                                       </td>
                                       <td class="text-center">
-                                          <button type="button" id="PopoverCustomT-1" class="btn btn-primary btn-sm">Details</button>
+                                          <button onclick="window.location.href = '{% url "project" project.id %}';" type="button" id="PopoverCustomT-1" class="btn btn-primary btn-sm">Details</button>
                                       </td>
                                   </tr>
-                                  <tr>
-                                      <td class="text-center text-muted">#347</td>
-                                      <td>
-                                          <div class="widget-content p-0">
-                                              <div class="widget-content-wrapper">
-                                                  <div class="widget-content-left mr-3">
-                                                      <div class="widget-content-left">
-                                                          <img width="40" class="rounded-circle" src="assets/images/avatars/3.jpg" alt="">
-                                                      </div>
-                                                  </div>
-                                                  <div class="widget-content-left flex2">
-                                                      <div class="widget-heading">Ruben Tillman</div>
-                                                      <div class="widget-subheading opacity-7">Etiam sit amet orci eget</div>
-                                                  </div>
-                                              </div>
-                                          </div>
-                                      </td>
-                                      <td class="text-center">Berlin</td>
-                                      <td class="text-center">
-                                          <div class="badge badge-success">Completed</div>
-                                      </td>
-                                      <td class="text-center">
-                                          <button type="button" id="PopoverCustomT-2" class="btn btn-primary btn-sm">Details</button>
-                                      </td>
-                                  </tr>
-                                  <tr>
-                                      <td class="text-center text-muted">#321</td>
-                                      <td>
-                                          <div class="widget-content p-0">
-                                              <div class="widget-content-wrapper">
-                                                  <div class="widget-content-left mr-3">
-                                                      <div class="widget-content-left">
-                                                          <img width="40" class="rounded-circle" src="assets/images/avatars/2.jpg" alt="">
-                                                      </div>
-                                                  </div>
-                                                  <div class="widget-content-left flex2">
-                                                      <div class="widget-heading">Elliot Huber</div>
-                                                      <div class="widget-subheading opacity-7">Lorem ipsum dolor sic</div>
-                                                  </div>
-                                              </div>
-                                          </div>
-                                      </td>
-                                      <td class="text-center">London</td>
-                                      <td class="text-center">
-                                          <div class="badge badge-danger">In Progress</div>
-                                      </td>
-                                      <td class="text-center">
-                                          <button type="button" id="PopoverCustomT-3" class="btn btn-primary btn-sm">Details</button>
-                                      </td>
-                                  </tr>
-                                  <tr>
-                                      <td class="text-center text-muted">#55</td>
-                                      <td>
-                                          <div class="widget-content p-0">
-                                              <div class="widget-content-wrapper">
-                                                  <div class="widget-content-left mr-3">
-                                                      <div class="widget-content-left">
-                                                          <img width="40" class="rounded-circle" src="assets/images/avatars/1.jpg" alt=""></div>
-                                                  </div>
-                                                  <div class="widget-content-left flex2">
-                                                      <div class="widget-heading">Vinnie Wagstaff</div>
-                                                      <div class="widget-subheading opacity-7">UI Designer</div>
-                                                  </div>
-                                              </div>
-                                          </div>
-                                      </td>
-                                      <td class="text-center">Amsterdam</td>
-                                      <td class="text-center">
-                                          <div class="badge badge-info">On Hold</div>
-                                      </td>
-                                      <td class="text-center">
-                                          <button type="button" id="PopoverCustomT-4" class="btn btn-primary btn-sm">Details</button>
-                                      </td>
-                                  </tr>
+                                {% endfor %}
                                   </tbody>
                               </table>
                           </div>
