--- a/stb/core/templates/base.html
+++ b/stb/core/templates/base.html
@@ -405,7 +405,7 @@
         {% block content %}{% endblock %}
     </div>
 </div>
-<script type="text/javascript" src="{% static 'ui/scripts/main.js' %}"></script></body>
+<script type="text/javascript" src="{% static 'ui/assets/scripts/main.js' %}"></script></body>
 </html>
 
 
