--- a/stb/core/templates/applications.html
+++ b/stb/core/templates/applications.html
@@ -40,6 +40,9 @@
             <div class="app-sidebar__inner">
                 <ul class="vertical-nav-menu">
                     <li class="app-sidebar__heading">Status</li>
+                    <li><a href="{% url 'applications' %}">
+                        <i class="metismenu-icon pe-7s-rocket"></i>All Applications</a>
+                    </li>
                     <li><a href="{% url 'applications-status' 'new-applications' %}">
                         <i class="metismenu-icon pe-7s-rocket"></i>New Applications</a>
                     </li>
