--- a/stb/core/templates/base.html
+++ b/stb/core/templates/base.html
@@ -23,6 +23,7 @@
     * The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
     -->
 <link href="{% static 'ui/main.css' %}" rel="stylesheet"></head>
+{% block addcss %}{% endblock %}
 <div>
     <div class="app-container app-theme-white body-tabs-shadow fixed-sidebar fixed-header">
         <div class="app-header header-shadow">
@@ -66,24 +67,25 @@
                     </div>
                     <ul class="header-menu nav">
                         <li class="nav-item">
-                            <a href="javascript:void(0);" class="nav-link">
+                            <a href="{% url "index" %}" class="nav-link">
                                 <i class="nav-link-icon fa fa-database"> </i>
-                                Statistics
+                                Home
                             </a>
                         </li>
                         <li class="btn-group nav-item">
-                            <a href="javascript:void(0);" class="nav-link">
+                            <a href="{% url "applications" %}" class="nav-link">
                                 <i class="nav-link-icon fa fa-edit"></i>
-                                Projects
+                                Applications
                             </a>
                         </li>
                         <li class="dropdown nav-item">
-                            <a href="javascript:void(0);" class="nav-link">
+                            <a href="{% url "profile" user.users.id %}" class="nav-link">
                                 <i class="nav-link-icon fa fa-cog"></i>
-                                Settings
+                                Profile
                             </a>
                         </li>
-                    </ul>        </div>
+                    </ul>
+                </div>
                 <div class="app-header-right">
                     <div class="header-btn-lg pr-0">
                         <div class="widget-content p-0">
@@ -95,21 +97,17 @@
                                             <i class="fa fa-angle-down ml-2 opacity-8"></i>
                                         </a>
                                         <div tabindex="-1" role="menu" aria-hidden="true" class="dropdown-menu dropdown-menu-right">
-                                            <button type="button" tabindex="0" class="dropdown-item">User Account</button>
-                                            <button type="button" tabindex="0" class="dropdown-item">Settings</button>
-                                            <h6 tabindex="-1" class="dropdown-header">Header</h6>
-                                            <button type="button" tabindex="0" class="dropdown-item">Actions</button>
-                                            <div tabindex="-1" class="dropdown-divider"></div>
-                                            <button type="button" tabindex="0" class="dropdown-item">Dividers</button>
+                                            <button onclick="window.location.href = '{% url "profile" user.users.id %}';" type="button" tabindex="0" class="dropdown-item">Profile</button>
                                         </div>
                                     </div>
                                 </div>
+                                {% if user.is_authenticated %}
                                 <div class="widget-content-left  ml-3 header-user-info">
                                     <div class="widget-heading">
-                                        Alina Mclourd
+                                        {{ user.users.full_name }}
                                     </div>
                                     <div class="widget-subheading">
-                                        VP People Manager
+                                        {{ user.username }}
                                     </div>
                                 </div>
                                 <div class="widget-content-right header-user-info ml-3">
@@ -117,6 +115,10 @@
                                         <i class="fa text-white fa-calendar pr-1 pl-1"></i>
                                     </button>
                                 </div>
+                                {% else %}
+                                <a href="{% url 'signup' %}">Sign Up</a></li>
+                                <a href="{% url 'login' %}">Sign In</a></li>
+                                {% endif %}
                             </div>
                         </div>
                     </div>
@@ -127,6 +129,7 @@
     </div>
 </div>
 <script type="text/javascript" src="{% static 'ui/assets/scripts/main.js' %}"></script></body>
+{% block js %}{% endblock %}
 </html>
 
 
